# rsloop

./: .gitignore  Cargo.toml  README.md  justfile  mkdocs.yml  pyproject.toml  qualirs.toml
.cargo/: config.toml
.github/workflows/: mkdocs.yml  tests.yml  wheels.yml
benchmarks/: README.md  compare_event_loops.py  workload_matrix.py
demo/: README.md  fastapi_service.py  picows_server.py  picows_test.py  wsbench_websockets.py
docs/: development.md  examples.md  getting-started.md  how-it-works.md  index.md  project-structure.md  rust-extensions.md
examples/: 01_basics.py  02_fd_and_sockets.py  03_streams.py  04_unix_and_accepted_socket.py  05_pipes_signals_subprocesses.py
examples/rust/: Cargo.toml  README.md  demo.py  pyproject.toml
examples/rust/src/: lib.rs
python/rsloop/: __init__.py  _bootstrap.py  _loop.cp314-win_amd64.pyd  _loop_compat.py  _profile.py  _run.py
scripts/: build-wheels.sh  generate-test-tls-certs.sh  generate_test_tls_certs.py  python-versions.sh  test-supported-pythons.sh
src/: async_event.rs  blocking.rs  callbacks.rs  context.rs  errors.rs  fast_streams.rs  fd_ops.rs  io_uring.rs  lib.rs  loop_core.rs  module_init.rs  process_transport.rs  profiler.rs  python_api.rs  python_names.rs  runtime.rs  rust_async.rs  stream_transport.rs  tls.rs  windows_vibeio.rs
src/fd_ops/: windows.rs
src/loop_core/: commands.rs
src/python_api/: ffi_helpers.rs  pre_exec.rs  process_handles.rs
src/runtime/: timer_entry.rs
src/tls/: material.rs
tests/: test_compat.py  test_run.py  test_tls.py
