[package]
name = "rsloop-rust-example"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "rsloop_rust_example"
crate-type = ["cdylib"]

[dependencies]
async-std = "1"
pyo3 = { version = "0.28", features = ["extension-module"] }
rsloop = { version = "0.1.14" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
incremental = false
# strip = true
